<resources>
    <string name="versionName">1.0</string>
    <string name="app_name">氧嘻嘻</string>
    <string name="library_refresh_top">下拉刷新</string>
    <string name="library_refresh_bottom">加载更多</string>
    <string name="library_refreshing">正在刷新...</string>
    <string name="library_refresh_start">松开刷新</string>
    <string name="library_refresh_time">上次更新时间:</string>
    <string name="library_loadmore_start">松开加载</string>
    <string name="library_loadmore_doing">正在加载...</string>
    <string name="library_loadmore_nodata">没有更多了</string>
    <string name="library_loadmore_error">加载失败，请重试</string>
    <string name="no_data">暂无数据</string>
    <string name="library_download_error_net">网络错误,下载失败</string>
    <string name="library_download_error_lose_data">数据丢失,下载失败</string>
    <string name="library_download_error_exist">TAG已经存在</string>
    <string name="txt_notirfy_updateapp_hide">开始升级</string>
    <string name="txt_notirfy_updateapp_title">正在升级</string>
    <string name="txt_notirfy_updateapp_msg">点击进入软件</string>
    <string name="txt_updateing">正在更新...</string>
    <string name="common_network_exception">网络异常</string>
    <string name="common_processing">处理中,请稍后.</string>
    <string name="common_loading">加载中,请稍后.</string>
    <string name="common_no_results">暂无数据</string>
    <string name="common_data_error">数据解析异常</string>
    <string name="common_recommend_money">推荐奖金：</string>
    <string name="common_ok">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_input_mobile_hint">请输入手机号码</string>
    <string name="common_mobile_error">请输入正确有效的手机号码</string>
    <string name="common_update_success">修改成功</string>
    <string name="common_send_again">%s秒后重新发送验证码</string>
    <string name="common_hint">提示</string>
    <string name="common_update_version_dialog_title">版本更新</string>
    <string name="login_title">登录</string>
    <string name="login_username_hint">用户名/Username</string>
    <string name="login_password_hint">密码/Password</string>
    <string name="login_submit">登入</string>
    <string name="login_forgot_password">忘记密码？</string>
    <string name="login_customer_login">个人用户请点击这里</string>
    <string name="login_userName_null">请输入Username</string>
    <string name="login_userPwd_null">请输入Password</string>
    <string name="login_errr">用户名或者密码错误</string>
    <string name="login_auto">自动登录</string>
    <string name="setpwd_titile">修改密码</string>
    <string name="setpwd_password_old">请输入旧密码</string>
    <string name="setpwd_password_newpwd">请输入新密码</string>
    <string name="setpwd_password_newpwd_ok">请确认新密码</string>
    <string name="setpwd_password_newpwd_err">两组新密码不一样哦！</string>
    <string name="setpwd_password_ok">修改密码成功</string>
    <string name="main_title">销售线索</string>
    <string name="main_distribution_title">分配</string>
    <string name="main_task_text">今日任务</string>
    <string name="main_select_text">全选</string>
    <string name="main_average_text">平均分配</string>
    <string name="main_waitfen_text">未分配</string>
    <string name="main_yigj_text">已跟进</string>
    <string name="main_weigj_text">未跟进</string>
    <string name="main_toast">请至少选择一条线索</string>
    <string name="consultant_search_hint">销售人员姓名</string>
    <string name="consultant_name">销售人员</string>
    <string name="details_title">任务详情</string>
    <string name="details_address">所在地</string>
    <string name="details_time">计划购车时间</string>
    <string name="details_drive">是否愿意试驾</string>
    <string name="details_price">购车预算</string>
    <string name="details_intention">购车意向</string>
    <string name="details_email">邮箱</string>
    <string name="details_tel">电话</string>
    <string name="subscribe">预约</string>
    <string name="remark">备注(可选填):</string>
    <string name="task_title">任务分配</string>
    <string name="txt_home">首页</string>
    <string name="txt_mission">任务</string>
    <string name="txt_clue">报告</string>
    <string name="txt_fieldpersonnel">我的</string>
    <string name="txt_mission_tab">订单列表</string>
    <string name="txt_singe">抢单</string>
    <string name="singe">接单</string>
    <string name="txt_fieldpersonnel_manage">外勤管理</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="basic_information">基本信息</string>
    <string name="name">姓名</string>
    <string name="service_address">服务地址</string>
    <string name="order_number">订单号</string>
    <string name="order_date">下单日期</string>
    <string name="more_information">更多信息</string>
    <string name="pack_up">收起</string>
    <string name="service_report">服务报告</string>
    <string name="examining_report">检测报告</string>
    <string name="title_activity_singe_details">SingeDetailsActivity</string>
    <string name="title_activity_personage_message">PersonageMessageActivity</string>
    <string name="title_activity_update_pwd">UpdatePwdActivity</string>
    <string name="title_activity_procedures">ProceduresActivity</string>
    <string name="title_activity_customerlogin">CustomerloginActivity</string>
    <string name="title_activity_grabsingle">GrabsingleActivity</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_personage_my_message">PersonageMyMessageActivity</string>
    <string name="title_activity_reset_pwd">ResetPwdActivity</string>
    <string name="title_activity_my_task">MyTaskActivity</string>
    <string name="title_activity_order_query">OrderQueryActivity</string>
    <string name="title_activity_order_list">OrderListActivity</string>
    <string name="title_activity_field_sign">FieldSignActivity</string>
</resources>