<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/login"
		android:gravity="center"
		android:orientation="vertical"
		android:paddingLeft="20dp"
		android:paddingRight="20dp" >

		<EditText
			android:id="@+id/et_userName"
			android:layout_width="fill_parent"
			android:layout_height="45dp"
			android:layout_marginTop="100dp"
			android:background="@color/edit_bj"
			android:drawableLeft="@drawable/icon_name"
			android:drawablePadding="5dp"
			android:hint="@string/login_username_hint"
			android:padding="5dp"
			android:singleLine="true"
			android:textColor="@color/white"
			android:textColorHint="@color/white" />

		<EditText
			android:id="@+id/et_userpwd"
			android:layout_width="fill_parent"
			android:layout_height="45dp"
			android:layout_marginTop="10dp"
			android:background="@color/edit_bj"
			android:drawableLeft="@drawable/icon_pwd"
			android:drawablePadding="5dp"
			android:hint="@string/login_password_hint"
			android:inputType="textPassword"
			android:padding="5dp"
			android:singleLine="true"
			android:textColor="@color/white"
			android:textColorHint="@color/white" />

		<Button
			android:id="@+id/btn_login"
			android:layout_width="fill_parent"
			android:layout_height="45dp"
			android:layout_marginTop="10dp"
			android:background="@drawable/login_button"
			android:text="@string/login_submit"
			android:textColor="@color/white" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:orientation="horizontal" >

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1" >

				<CheckBox
					android:id="@+id/checkBox_remember"
					android:layout_width="28dp"
					android:layout_height="28dp"
					android:background="@drawable/checkbox_large"
					android:button="@null"
					android:checked="true" />

				<TextView
					android:id="@+id/tv_remember"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_toRightOf="@+id/checkBox_remember"
					android:text="记住用户名"
					android:textColor="@color/white" />
			</RelativeLayout>

			<TextView
				android:id="@+id/tv_forgetPwd"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:gravity="right"
				android:text="@string/login_forgot_password"
				android:textColor="@color/white" />
		</LinearLayout>
	</LinearLayout>

	<TextView
		android:id="@+id/start_img"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/logins" />

</FrameLayout>