<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <RelativeLayout
        android:id="@+id/rl_aa"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_layout_height"
        android:background="@color/bg_title" >

        <RelativeLayout
            android:id="@+id/rel_details_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/iv_mission_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:src="@drawable/left_arrow" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_mission_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:gravity="center"
            android:maxEms="15"
            android:singleLine="true"
            android:text="@string/txt_mission_tab"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/rel_derails_fresh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingLeft="15dp"
            android:paddingRight="10dp" >

            <ImageView
                android:id="@+id/iv_mission_fresh"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:src="@drawable/phone_click" />
        </RelativeLayout>
    </RelativeLayout>
<!-- 
    <WebView
        android:id="@+id/webView_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
       -->  
  <ScrollView 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/rl_aa"
    >
<LinearLayout 
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     >     
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
	  <TextView 
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="@string/basic_information"
	      android:padding="20dp"
	      /> 
	    <View 
	        android:layout_width="match_parent"
	        android:layout_height="0.2dp"
	        android:background="@color/view_hui"
	        />
	  <LinearLayout 
	      android:id="@+id/ll_details_name"
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:orientation="horizontal"
	      android:padding="10dp"
	      > 
	   
	   <TextView 
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/name"
	       android:layout_marginLeft="10dp"
	       /> 
	    <TextView 
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="张三"
	       android:layout_marginLeft="62dp"
	       />    
	   </LinearLayout> 
	  <View 
	      android:layout_width="match_parent"
	      android:layout_height="0.2dp"
	      android:background="@color/view_hui"
	      />
	    <LinearLayout 
	      android:id="@+id/ll_details_tel"
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:orientation="horizontal"
	      android:padding="10dp"
	      > 
	   
	   <TextView 
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/details_tel"
	       android:layout_marginLeft="10dp"
	       /> 
	    <TextView 
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="13838383838"
	       android:layout_marginLeft="62dp"
	       />    
	   </LinearLayout> 
	  <View 
	      android:layout_width="match_parent"
	      android:layout_height="0.2dp"
	      android:background="@color/view_hui"
	      />
	    <LinearLayout 
	      android:id="@+id/ll_details_service_address"  
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:orientation="horizontal"
	      android:padding="10dp"
	      > 
	   
	   <TextView 
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/service_address"
	       android:layout_marginLeft="10dp"
	       /> 
	    <TextView 
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="上海市虹口区车站北路403弄603室"
	       android:layout_marginLeft="30dp"
	       />    
	   </LinearLayout>
	   <TextView 
	      android:id="@+id/view_service_address" 
	      android:layout_width="match_parent"
	      android:layout_height="0.2dp"
	      android:background="@color/view_hui"
	      android:visibility="gone"
	      />
	  <LinearLayout 
	      android:id="@+id/ll_details_order_number"  
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:orientation="horizontal"
	      android:padding="10dp"
	      android:visibility="gone"
	      > 
	   
	   <TextView 
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/order_number"
	       android:layout_marginLeft="10dp"
	       /> 
	    <TextView 
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="1651354684131"
	       android:layout_marginLeft="42dp"
	       />    
	   </LinearLayout>  
	  <TextView 
	      android:id="@+id/view_details_order_number" 
	      android:layout_width="match_parent"
	      android:layout_height="0.2dp"
	      android:background="@color/view_hui"
	      android:visibility="gone"
	      />
	  <LinearLayout 
	      android:id="@+id/ll_details_order_date"
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:orientation="horizontal"
	      android:padding="10dp"
	      android:visibility="gone"
	      > 
	   
	   <TextView 
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/order_date"
	       android:layout_marginLeft="10dp"
	       /> 
	   <TextView 
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="2017年2月20日    11:28"
	       android:layout_marginLeft="32dp"
	       />    
	   </LinearLayout>  
	 <TextView 
	      android:id="@+id/view_details_order_date" 
	      android:layout_width="match_parent"
	      android:layout_height="0.2dp"
	      android:background="@color/view_hui"
	      android:visibility="gone"
	      />
	 <LinearLayout 
	      android:id="@+id/ll_details_email"
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:orientation="horizontal"
	      android:padding="10dp"
	      android:visibility="gone"
	      > 
	   
	   <TextView 
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/details_email"
	       android:layout_marginLeft="10dp"
	       /> 
	    <TextView 
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="123456@163.com"
	       android:layout_marginLeft="62dp"
	       />    
	   </LinearLayout>  
	  <View 
	      android:layout_width="match_parent"
	      android:layout_height="0.2dp"
	      android:background="@color/view_hui"
	      /> 
	   	<TextView 
	   	    android:id="@+id/tv_more_information"
	   	 	android:layout_width="match_parent"
	  		android:layout_height="wrap_content" 
	  		android:text="@string/more_information"
	  		android:padding="20dp"
	  		android:gravity="center"
	   	/>
	   <View 
	       android:layout_width="match_parent"
	       android:layout_height="0.2dp"
	       android:background="@color/view_hui"
	       />   
	   <TextView 
	   	    android:id="@+id/tv_pack_up"
	   	 	android:layout_width="match_parent"
	  		android:layout_height="wrap_content" 
	  		android:text="@string/pack_up"
	  		android:padding="20dp"
	  		android:gravity="center"
	  		android:visibility="gone"
	   	/>
	   <View 
	       android:layout_width="match_parent"
	       android:layout_height="0.2dp"
	       android:background="@color/view_hui"
	       />       
	</LinearLayout>
	<View 
	    android:layout_width="wrap_content"
	    android:layout_height="10dp"
	    android:background="@color/view_hui"
	    />
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
	  <RelativeLayout 
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:padding="10dp"
	      > 
	   
	   <TextView 
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/subscribe"
	       android:layout_marginLeft="10dp"
	       /> 
	    <TextView 
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="时间:2017-02-20 18:14"
	       android:layout_alignParentRight="true"
	       android:layout_marginRight="10dp"
	       />    
	   </RelativeLayout> 
	  <View 
	      android:layout_width="match_parent"
	      android:layout_height="0.2dp"
	      android:background="@color/view_hui"
	      />
	   <LinearLayout 
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:padding="10dp"
	      android:orientation="horizontal"
	      > 
	   
	   <TextView 
	       android:id="@+id/tv_details_remark"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/remark"
	       android:layout_marginLeft="10dp"
	       /> 
	    <TextView 
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="这里只是备注，随便填..."
	       android:layout_marginLeft="10dp"
	       />    
	   </LinearLayout> 
	  <View 
	    android:layout_width="wrap_content"
	    android:layout_height="10dp"
	    android:background="@color/view_hui"
	    />
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
	  <TextView 
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="@string/service_report"
	      android:padding="20dp"
	      /> 
	    <View 
	        android:layout_width="match_parent"
	        android:layout_height="0.2dp"
	        android:background="@color/view_hui"
	        />
	
	</LinearLayout>
	
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:padding="10dp"
       >
	<ImageView 
	    android:id="@+id/iv_service_report"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:src="@drawable/tinajia"
	    />
      <GridView 
          android:id="@+id/gv_service_report"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          ></GridView> 
     
   </LinearLayout>
  <View 
	    android:layout_width="wrap_content"
	    android:layout_height="10dp"
	    android:background="@color/view_hui"
	    />
   <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
	  <TextView 
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="@string/examining_report"
	      android:padding="20dp"
	      /> 
	    <View 
	        android:layout_width="match_parent"
	        android:layout_height="0.2dp"
	        android:background="@color/view_hui"
	        />
	
	</LinearLayout>
  <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:padding="10dp"
       >
	<ImageView 
	    android:id="@+id/iv_examiningreport"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:src="@drawable/tinajia"
	    />
      <GridView 
          android:id="@+id/gv_examiningreport"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          ></GridView> 
       
	<!-- #AF000000 70%透明灰 -->   
   </LinearLayout> 
   <View 
       android:layout_width="match_parent"
       android:layout_height="10dp"
       android:background="@color/view_hui"
       />
  <View 
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:background="@color/white"
	    />
 
</LinearLayout> 
 </ScrollView>  

 <include 
     layout="@layout/details_item"
     />
</RelativeLayout>