<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="160dp"
    android:layout_gravity="center"
    android:background="@drawable/dialog_white"
    android:orientation="vertical"
    android:paddingTop="20dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_average_text"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size2"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingLeft="18dp"
        android:paddingRight="18dp" >

        <TextView
            android:id="@+id/tv_thisNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/main_average_text"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size4" />

        <TextView
            android:id="@+id/tv_xsNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_average_text"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <TextView
            android:id="@+id/tv_avgNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:text="@string/main_average_text"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size4" />

        <TextView
            android:id="@+id/tv_syNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_average_text"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size4" />
    </LinearLayout>

    <TextView
        style="@style/line"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/common_cancel"
            android:textColor="@color/button_text_color"
            android:textSize="16sp" />

        <TextView
            style="@style/line"
            android:layout_width="1dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/common_ok"
            android:textColor="@color/button_text_color"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>